--- a/Unify/Base.lproj/LaunchScreen.storyboard
+++ b/Unify/Base.lproj/LaunchScreen.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -35,12 +34,12 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="SVN-cT-wal" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="95N-zV-cp8"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="SVN-cT-wal" secondAttribute="bottom" id="80U-TG-abm"/>
                             <constraint firstItem="G11-7P-n3Q" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="KAK-4H-2hX"/>
-                            <constraint firstItem="SVN-cT-wal" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="-16" id="d8c-bN-9rv"/>
-                            <constraint firstItem="SVN-cT-wal" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="-20" id="e8r-XP-ktn"/>
+                            <constraint firstItem="SVN-cT-wal" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="Poj-5N-VkJ"/>
+                            <constraint firstAttribute="trailing" secondItem="SVN-cT-wal" secondAttribute="trailing" id="SPJ-Z8-eXs"/>
+                            <constraint firstItem="SVN-cT-wal" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="hZg-Hc-gvW"/>
                             <constraint firstItem="G11-7P-n3Q" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="q8O-Uq-fCl"/>
-                            <constraint firstItem="SVN-cT-wal" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="sp1-Pt-R4t"/>
                         </constraints>
                     </view>
                 </viewController>
